<resources>
    <string name="app_name">Cryptfolio</string>
    <string name="filler">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim eu turpis egestas pretium. Senectus et netus et malesuada. Pharetra et ultrices neque ornare aenean euismod elementum nisi quis. Lacinia at quis risus sed vulputate odio ut enim. Suscipit adipiscing bibendum est ultricies integer quis auctor. Vulputate odio ut enim blandit volutpat. Sagittis nisl rhoncus mattis rhoncus urna neque. Volutpat blandit aliquam etiam erat. Arcu non sodales neque sodales. Tincidunt ornare massa eget egestas purus. Purus faucibus ornare suspendisse sed nisi lacus. Faucibus ornare suspendisse sed nisi lacus sed viverra tellus in. Quisque sagittis purus sit amet volutpat consequat mauris. Id consectetur purus ut faucibus pulvinar elementum integer enim neque. Donec ultrices tincidunt arcu non sodales neque sodales. Iaculis urna id volutpat lacus laoreet non. Enim nec dui nunc mattis enim. Suspendisse potenti nullam ac tortor vitae. Mauris a diam maecenas sed enim ut.

Vivamus arcu felis bibendum ut tristique et egestas quis. Quam lacus suspendisse faucibus interdum posuere lorem. Sed elementum tempus egestas sed. Imperdiet massa tincidunt nunc pulvinar. Quis risus sed vulputate odio ut enim blandit volutpat. Justo eget magna fermentum iaculis eu non. Mi eget mauris pharetra et ultrices. Justo eget magna fermentum iaculis eu non diam. Hendrerit gravida rutrum quisque non tellus. Urna id volutpat lacus laoreet non curabitur gravida arcu. In iaculis nunc sed augue lacus viverra vitae. Dolor sed viverra ipsum nunc aliquet bibendum. Neque egestas congue quisque egestas diam in arcu cursus euismod. Et magnis dis parturient montes nascetur ridiculus mus mauris vitae.

Quam id leo in vitae turpis massa sed elementum tempus. Vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt. Integer feugiat scelerisque varius morbi enim. Mi tempus imperdiet nulla malesuada pellentesque. Lobortis mattis aliquam faucibus purus in massa tempor. Pharetra convallis posuere morbi leo urna molestie at elementum eu. Sit amet purus gravida quis blandit turpis cursus. Eu tincidunt tortor aliquam nulla facilisi cras fermentum odio. Ipsum suspendisse ultrices gravida dictum fusce ut. Sollicitudin nibh sit amet commodo nulla facilisi. Sollicitudin aliquam ultrices sagittis orci a scelerisque purus semper eget. Feugiat nisl pretium fusce id velit ut. Quis auctor elit sed vulputate mi. Nunc eget lorem dolor sed viverra.

Sociis natoque penatibus et magnis dis parturient montes nascetur ridiculus. Velit egestas dui id ornare. Vitae congue eu consequat ac felis donec. Vestibulum lectus mauris ultrices eros in. Pretium fusce id velit ut tortor. Nibh tortor id aliquet lectus proin nibh nisl condimentum id. Nulla aliquet enim tortor at auctor urna nunc. Dui ut ornare lectus sit amet est placerat in egestas. Viverra justo nec ultrices dui sapien eget mi proin. Magna etiam tempor orci eu lobortis elementum nibh. Pellentesque dignissim enim sit amet. Cum sociis natoque penatibus et. Faucibus interdum posuere lorem ipsum dolor sit amet consectetur. Tincidunt arcu non sodales neque sodales ut etiam. Quis hendrerit dolor magna eget est lorem ipsum. Phasellus vestibulum lorem sed risus ultricies tristique nulla aliquet.

At imperdiet dui accumsan sit amet nulla. Lectus urna duis convallis convallis tellus. Arcu bibendum at varius vel pharetra vel. Nec dui nunc mattis enim ut tellus elementum sagittis vitae. Vestibulum sed arcu non odio. Ut sem nulla pharetra diam sit amet. Amet mattis vulputate enim nulla aliquet porttitor. Eu feugiat pretium nibh ipsum consequat nisl vel pretium. Lacus suspendisse faucibus interdum posuere lorem ipsum dolor sit amet. Venenatis a condimentum vitae sapien pellentesque habitant morbi tristique. Ullamcorper eget nulla facilisi etiam dignissim diam. Massa id neque aliquam vestibulum morbi blandit cursus. Aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque. Cras ornare arcu dui vivamus. Et netus et malesuada fames ac turpis egestas. Quam nulla porttitor massa id neque aliquam vestibulum. Egestas maecenas pharetra convallis posuere morbi.</string>
    <string name="search_view_find_coin_hint">Enter a coin name</string>
    <string name="hint_buy_price">Buy Price</string>
    <string name="hint_amount_bought">Amount Bought</string>
    <string name="button_add_transaction">Add Transaction</string>
    <string name="text_view_exchange_label">Exchange</string>
    <string name="text_view_trading_pair_label">Trading Pair</string>
    <string name="list_item_transaction_trading_pair_label">Trading Pair</string>
    <string name="list_item_transaction_trading_pair_label">Trading Pair</string>
    <string name="list_item_transaction_worth_label">Worth</string>
    <string name="list_item_transaction_percent_change_labl">% Change</string>
    <string name="list_item_transaction_label_amount">Amount Purchased</string>
</resources>
