<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="6dp"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_margin="@dimen/small_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.Guideline
            android:id="@+id/guideline33"
            style="@style/guidlineVertical"
            app:layout_constraintGuide_percent="0.33"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline50"
            style="@style/guidlineVertical"
            app:layout_constraintGuide_percent="0.50"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline66"
            style="@style/guidlineVertical"
            app:layout_constraintGuide_percent="0.66"/>

        <TextView
            android:id="@+id/list_item_transaction_crypto_buy_price_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_view_label_text_size"
            app:layout_constraintStart_toEndOf="@id/guideline33"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="BTC Buy Price"
            />

        <TextView
            android:id="@+id/list_item_transaction_crypto_buy_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/guideline33"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/list_item_transaction_crypto_buy_price_label"
            tools:text="$10000"
            />

        <TextView
            android:id="@+id/list_item_transaction_trading_pair_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/list_item_transaction_trading_pair_label"
            android:textSize="@dimen/text_view_label_text_size"
            app:layout_constraintEnd_toStartOf="@id/guideline66"
            app:layout_constraintStart_toEndOf="@id/guideline33"
            />

        <TextView
            android:id="@+id/list_item_transaction_trading_pair"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/guideline66"
            app:layout_constraintStart_toEndOf="@id/guideline33"
            app:layout_constraintTop_toBottomOf="@id/list_item_transaction_trading_pair_label"
            tools:text="BTC/USD"
            />

        <TextView
            android:id="@+id/list_item_transaction_amount_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/list_item_transaction_label_amount"
            android:textSize="@dimen/text_view_label_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline66"
            />

        <TextView
            android:id="@+id/list_item_transaction_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline66"
            app:layout_constraintTop_toBottomOf="@id/list_item_transaction_amount_label"
            tools:text="10"
            />


        <android.support.v4.widget.Space
            android:id="@+id/spacer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_transaction_spacer_height"
            app:layout_constraintTop_toBottomOf="@id/list_item_transaction_amount"/>

        <!--Second Row-->
        <TextView
            android:id="@+id/list_item_transaction_worth_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/list_item_transaction_worth_label"
            android:textSize="@dimen/text_view_label_text_size"
            app:layout_constraintEnd_toStartOf="@id/guideline66"
            app:layout_constraintStart_toEndOf="@id/guideline33"
            app:layout_constraintTop_toBottomOf="@id/spacer"
            />

        <TextView
            android:id="@+id/list_item_transaction_worth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/guideline66"
            app:layout_constraintStart_toEndOf="@id/guideline33"
            app:layout_constraintTop_toBottomOf="@id/list_item_transaction_worth_label"
            tools:text="$100,000"
            />

        <TextView
            android:id="@+id/list_item_transaction_percent_change_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/list_item_transaction_percent_change_labl"
            android:textSize="@dimen/text_view_label_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline66"
            app:layout_constraintTop_toBottomOf="@id/spacer"
            />

        <TextView
            android:id="@+id/list_item_transaction_percent_change"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline66"
            app:layout_constraintTop_toBottomOf="@id/list_item_transaction_percent_change_label"
            tools:text="1080%"
            />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>